# VoxelTest

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: rust.yml
res/: cube.mtl
shaders/: chunk_instance.wgsl  light.wgsl  shader.wgsl
src/: app.rs  assets.rs  camera.rs  chunks.rs  command_buffer.rs  frustum.rs  input.rs  instance.rs  lib.rs  light.rs  main.rs  model.rs  resource.rs  texture.rs  ui.rs
src/engine/: engine.rs
