[package]
name = "VoxelTest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.6"
env_logger = "0.10.0"
log = "0.4.18"
wgpu = "0.16.1"
pollster = "0.3.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
anyhow = "1.0.71"
glam = "0.24.0"
rayon = "1.7.0"
tobj = {version = "4.0.0", features = ["async"]}

[dependencies.image]
version = "0.24.6"
default-features = false
features = ["png", "jpeg", "jpeg_rayon"]

[profile.dev]
opt-level = 1

[profile.release]
lto = true
panic = "abort"

[build-dependencies]
anyhow = "1.0.71"
fs_extra = "1.3.0"
glob = "0.3.1"
