[package]
name = "VoxelTest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.6"
env_logger = "0.10.0"
log = "0.4.20"
wgpu = "0.17.0"
wgpu_glyph = "0.21.0"
pollster = "0.3.0"
bytemuck = { version = "1.14.0", features = ["derive"] }
anyhow = "1.0.75"
glam = "0.24.2"
rayon = "1.8.0"
tobj = {version = "4.0.0", features = ["async"]}
rust-embed = { version = "8.0.0", features = ["compression"] }
flume = "0.11.0"
uuid = { version = "1.3.4", features = ["v4", "fast-rng"] }

[dependencies.image]
version = "0.24.7"
default-features = false
features = ["png", "jpeg", "jpeg_rayon"]

[profile.dev]
opt-level = 1

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1
