[package]
name = "VoxelTest"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29.15"
env_logger = "0.11.3"
log = "0.4.18"
wgpu = "0.19.3"
glyphon = "0.5.0"
pollster = "0.3.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
anyhow = "1.0.71"
glam = "0.26.0"
rayon = "1.7.0"
tobj = { version = "4.0.0", features = ["async"] }
rust-embed = { version = "8.3.0", features = ["compression"] }
flume = "0.11.0"
uuid = { version = "1.3.4", features = ["v4", "fast-rng"] }

[dependencies.image]
version = "0.25.0"
default-features = false
features = ["png", "jpeg", "rayon"]

[profile.dev]
opt-level = 1

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1
